# linphone_sdk

./: Makefile.am  Makefile.in  build.sh  configure  configure.ac
alsa-lib-1.0.23/: configure
alsa-lib-1.0.23/autom4te.cache/: output.0  requests  traces.0
autom4te.cache/: output.1  requests  traces.0  traces.1
belle-sip-1.4.1/autom4te.cache/: output.1  requests  traces.0  traces.1  traces.2
ffmpeg/: config.fate  config.h  config.mak  ffmpeg  ffmpeg_g  ffprobe  ffprobe_g  ffserver  ffserver_g
ffmpeg/doc/: ffmpeg-bitstream-filters.1  ffmpeg-codecs.1  ffmpeg-devices.1  ffmpeg-filters.1  ffmpeg-filters.pod  ffmpeg-formats.1  ffmpeg-formats.pod  ffmpeg-protocols.1  ffmpeg-resampler.1  ffmpeg-scaler.1  ffmpeg-utils.1  ffmpeg.1  ffprobe.1  ffserver.1  libavcodec.3  libavdevice.3  libavfilter.3  libavformat.3  libavutil.3  libswresample.3  libswscale.3  print_options
ffmpeg/libavcodec/: libavcodec.pc
ffmpeg/libavdevice/: libavdevice.pc
ffmpeg/libavfilter/: libavfilter.pc
ffmpeg/libavformat/: libavformat.pc
fremaks_utils/: config.h.in~
fremaks_utils/autom4te.cache/: output.0  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
fremaks_utils/fms_common/: Makefile.in
fremaks_utils/include/: Makefile.in
libxml2-2.9.1/: Makefile.in
linphone_interface/: config.h.in  configure  configure.ac
linphone_interface/base/src/: Makefile.am  Makefile.in  linphone_base.c
mswebrtc/: Makefile  Makefile.in  config.h  config.status  configure  libtool  mswebrtc.iss
x264/: config.h  config.mak  x264  x264.pc
(+103 files in other folders)
